Favourite fonctionne : il retourne une liste de FILMDTO